# Spendr-AI

./: LICENSE  README.md  pyproject.toml
core/: asgi.py  urls.py
core/api/v1/: urls.py
expense_backend/: db.sqlite3  requirements.txt
expense_backend/core/: settings.py
expense_backend/expenses/: serializers.py  urls.py
expense_backend/expenses/migrations/: 0001_initial.py
expense_backend/reports/services/: ai_insights.py  ai_parser.py  analytics.py
expense_backend/users/: models.py  serializers.py  urls.py  views.py
expense_frontend/: index.html  package-lock.json  package.json
expense_frontend/src/: App.jsx
expense_frontend/src/api/: api.js
expense_frontend/src/components/: AddExpense.jsx  ChartComponent.jsx  ConfirmDialog.jsx  Dashboard.jsx  ExpenseList.jsx  ExportButton.jsx
expenses/: models.py  views.py
expenses/migrations/: 0002_budget.py  0003_alter_budget_category_alter_expense_category.py
reports/: urls.py  views.py
users/migrations/: 0001_initial.py
